--- a/login/index.html
+++ b/login/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N Tecnologias | login</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/icons.css">
+
 </head>
+
 <body>
-    
+    <section id="loginBox">
+        <img src="/assets/logo_square.png" alt="logo" />
+        <form action="/dashboard" method="get" onsubmit="return Validate();">
+            <div class="input">
+                <i class="userIcon"></i>
+                <input class="user" type="text" name="username" id="inputUsername" placeholder="Usuário" required />
+            </div>
+            <div class="input">
+                <i class="passwordIcon"></i>
+                <input type="password" name="password" id="inputPassword" placeholder="Senha" required />
+            </div>
+
+            <input class="enterBtn" type="submit" value="Acessar" />
+        </form>
+
+        <a href="/recover">
+            <p>
+                Recuperar Credenciais
+            </p>
+        </a>
+    </section>
+    <div class="footerLogin">
+        <h2>Powered By</h2>
+        <img src="/assets/logo_small.png" alt="Logo">
+    </div>
+
+    <script>
+        function Validate() {
+            const username = document.getElementById("inputUsername").value;
+            const password = document.getElementById("inputPassword").value;
+            const condition = (username === "admin" && password === "admin") ? true : false;
+            return condition
+        }
+        function InputActive() {
+            const element = document.getElementById("myDIV");
+            element.classList.toggle("mystyle");
+        }
+    </script>
 </body>
+
 </html>
