--- a/login/index.html
+++ b/login/index.html
@@ -14,7 +14,7 @@
 <body>
     <section id="loginBox">
         <img src="../assets/logo_square.png" alt="logo" />
-        <form action="../sidebar" method="get" onsubmit="return Validate();">
+        <form action="../sidebarComponent/" method="get" onsubmit="return Validate();">
             <div class="input">
                 <i class="userIcon"></i>
                 <input oninput="InputActive();" class="user" type="text" name="username" id="inputUsername"
