[Basic] - Criar o componente Cabeçalho de boas-vindas

--- a/sidebarComponent/index.html
+++ b/sidebarComponent/index.html
@@ -76,13 +76,13 @@
                 </ul>
             </nav>
             <footer class="opts">
-                <a href="./">
+                <a href="./" class="linkWithIcon">
                     <i class="configIcon"></i>
                     <p>
                         Configurações
                     </p>
                 </a>
-                <a href="./">
+                <a href="./" class="linkWithIcon">
                     <i class="helpIcon"></i>
                     <p>
                         Ajuda
