HTML Validation Steps

--- a/sidebarComponent/index.html
+++ b/sidebarComponent/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="sidebarComponent">
-        <button type="menu" class="sidebarToogler"><i class="showSidebarIcon"></i></button>
+        <button type="button" class="sidebarToogler"><i class="showSidebarIcon"></i></button>
         <section id="Sidebar" class="shadowCard">
             <img class="businessLogo" src="../assets/logo_business.svg" alt="logo da empresa" />
             <div class="profile separatorLineInBox">
@@ -27,9 +27,7 @@
             <nav class="navbars">
                 <ul id="nav1" class="shadowNavBox">
                     <li><span class="caret caret-down">
-                            <h1>
-                                FINANCEIRO
-                            </h1>
+                            FINANCEIRO
                         </span>
                         <ul class="nested active">
                             <li>
@@ -45,9 +43,7 @@
                 </ul>
                 <ul id="nav2" class="shadowNavBox">
                     <li><span class="caret">
-                            <h1>
-                                OPERACIONAL
-                            </h1>
+                            OPERACIONAL
                         </span>
                         <ul class="nested active">
                             <li>
@@ -68,9 +64,7 @@
                 </ul>
                 <ul id="nav3" class="shadowNavBox">
                     <li><span class="caret">
-                            <h1>
-                                VISÃO GERAL
-                            </h1>
+                            VISÃO GERAL
                         </span>
                     </li>
                 </ul>
