--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1; URL='./login'"/>
+    <meta http-equiv="refresh" content="1; URL=./login"/>
     <title>N Tecnologias | login</title>
 </head>
 <body>
