--- a/login/index.html
+++ b/login/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section id="loginBox">
+    <article id="loginBox">
         <img src="../assets/logo_square.png" alt="logo" />
         <form action="../headerGreetings/" method="get" onsubmit="return Validate();">
             <div class="input">
@@ -33,7 +33,7 @@
                 Recuperar Credenciais
             </p>
         </a>
-    </section>
+    </article>
     <div class="footerLogin">
         <h2>Powered By</h2>
         <img src="../assets/logo_small.png" alt="Logo">
