JavaScript Api Context

--- a/headerGreetings/index.html
+++ b/headerGreetings/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="greetings shadowCard">
         <h1>
-            Bem vindo(a),&nbsp;<span style="font-style: italic;">Administrador</span>
+            Bem-vindo(a),&nbsp;<span class="userText" style="font-style: italic;">Administrador</span>
         </h1>
         <a href="../" class="logout linkWithIcon">
             <i class="logoutIcon"></i>
@@ -26,6 +26,7 @@
             <button><i class="userMenuIcon"></i></button>
         </div>
     </header>
+    <script src="../js/appendContext.js"></script>
 </body>
 
 </html>
